--- a/app/index2.html
+++ b/app/index2.html
@@ -1,28 +1,44 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app="meetingRoom">
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+  <title>TUV-SUD</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/animations.css">
-
+  <link rel="stylesheet" href="css/main.css">
+  
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/animations.js"></script>
+  
   <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="">会议室预订系统</a>
+        </div>
+        <div class="navbar-collapse collapse" ng-controller="Home">
+          <div class="nav navbar-nav navbar-right" id="welcome">
+            欢迎- <span ng-bind="user.name"></span>
+          </div>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-  <div class="view-container">
-    <div ng-view class="view-frame"></div>
-  </div>
-
+	<div id="header">
+		<div class="container">
+			<div class="row" ng-view></div>
+		</div>
+	</div>
 </body>
 </html>
