--- a/app/index2.html
+++ b/app/index2.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>TUV-SUD</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/datetimepicker/jquery.datetimepicker.css">
     <link rel="stylesheet" href="css/main.css">
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/datetimepicker/jquery.datetimepicker.js"></script>
     <script src="bower_components/template/template.js"></script>
     <script src="js/common.js"></script>
     <script src="js/home.js"></script>
@@ -35,6 +37,24 @@
 <div id="header">
     <div class="container">
         <div class="row" id="main-container"></div>
+        <div class="row" id="main-container-reservation" style="display:none;">
+            <div id="room-main" class="col-lg-12 opacity-80 bg-color-000 padding-30">
+                <div class="room-header">
+                    Date: <input type="text" value="" id="txt-date" readonly="readonly"/>
+                    Interval:
+                    <select id="slt-interval">
+                        <option value="5">5分钟</option>
+                        <option value="15">15分钟</option>
+                        <option value="30">30分钟</option>
+                        <option value="60" selected="selected">1小时</option>
+                        <option value="90">1.5小时</option>
+                        <option value="120">2小时</option>
+                    </select>
+                </div>
+                <div class="room-contain" id="room-reservation-list">
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/html" id="template-signup">
@@ -53,39 +73,42 @@
     </div>
 </script>
 <script type="text/html" id="template-reservation">
-    <div id="room-main" class="col-lg-12 opacity-80 bg-color-000 padding-30">
-        <div class="room-header">
-            date: 2015-07-25
-        </div>
-        <div class="room-contain">
-            <table class="table">
-                <thead>
-                {{each rooms as room}}
-                <th>{{room.name}}</th>
-                {{/each}}
-                </thead>
-                <tbody>
-                {{each reservations as cols}}
-                <tr>
-                    {{each cols as reservation index}}
-                    <td><a href="javascript:void(0);" class="reservation-link {{if !reservation.enable}}disabled{{/if}}
+    <table class="table">
+        <thead>
+        {{each rooms as room}}
+        <th>{{room.name}}</th>
+        {{/each}}
+        </thead>
+        <tbody>
+        {{each reservations as cols}}
+        <tr>
+            {{each cols as reservation index}}
+            <td><a href="javascript:void(0);" data-toggle="tooltip" data-placement="bottom"
+                   class="reservation-link {{if !reservation.enable}}disabled{{/if}}
                         {{if reservation.isReserved}}reserved{{/if}}
                         {{if reservation.isReserved&&reservation.canRevert}}canrevert{{/if}}"
-                        roomId="{{rooms[index]._id}}"
-                        start="{{reservation.start}}" end="{{reservation.end}}"
-                        canRevert="{{if reservation.canRevert}}true{{/if}}"
-                        isReserved = "{{if reservation.isReserved}}true{{/if}}"
-                        enable="{{if reservation.enable}}true{{/if}}"
-                        {{if reservation.reservation}}reservationId="{{reservation.reservation._id}}"{{/if}}>
-                        {{reservation.text}}</a>
-                    </td>
-                    {{/each}}
-                </tr>
-                {{/each}}
-                </tbody>
-            </table>
-        </div>
-    </div>
+                   roomId="{{rooms[index]._id}}"
+                   start="{{reservation.start}}" end="{{reservation.end}}"
+                   canRevert="{{if reservation.canRevert}}true{{/if}}"
+                   isReserved="{{if reservation.isReserved}}true{{/if}}"
+                   enable="{{if reservation.enable}}true{{/if}}"
+                   {{if reservation.reservation}}reservationId="{{reservation.reservation._id}}" {{/if}}>
+                {{reservation.text}}</a>
+                {{if reservation.reservation}}
+                <div class="tip-reservation" style="display: none;">
+                    <ul class="list-group">
+                        <li class="list-group-item">预订人：{{reservation.reservation.userName}}</li>
+                        <li class="list-group-item">预订时间：{{reservation.reservation.createDate}}</li>
+                        <li class="list-group-item">备注：{{reservation.reservation.comment}}</li>
+                    </ul>
+                </div>
+                {{/if}}
+            </td>
+            {{/each}}
+        </tr>
+        {{/each}}
+        </tbody>
+    </table>
 </script>
 </body>
 </html>
