remove useless file

--- a/app/index2.html
+++ b/app/index2.html
@@ -54,6 +54,13 @@
                 <div class="room-contain" id="room-reservation-list">
                 </div>
             </div>
+            <div id="room-operation" class="col-lg-8 col-lg-offset-2 text-center navbar-fixed-bottom" style="display:none;">
+                
+                <div></div>
+                <div>
+                    备注: <input type="text" placeholder="输入会议主题或说明或..." id="reservation-comment"/>
+                </div>
+            </div>
         </div>
     </div>
 </div>
